--- a/index.html
+++ b/index.html
@@ -29,10 +29,7 @@
         <model-viewer src="https://drive.google.com/uc?export=download&id=1ZgcBBG5dUXeEEia-a9nQHe2sgYHTmIIA" alt="Wood Diety" camera-controls ar ios-src="assets\bottle\CHAHIN_BOTTLE_OF_SODA.usdz"></model-viewer>
        --> 
         
-        <model-viewer id="m-viewer"
-            src="AnimatedMorphCube.glb" alt="wood diety" ios-src="https://playhybrid-bucket.s3.us-east-2.amazonaws.com/usdz_bell_x1_low_resolution___1612908258317.usdz"
-            camera-controls ar ar-placement="floor" autoplay quick-look-browsers="safari chrome" background-color="#222"
-            >
+        <model-viewer id="m-viewer" src="AnimatedMorphCube.glb" alt="wood diety" camera-controls ar ar-placement="floor" autoplay quick-look-browsers="safari chrome" background-color="#222">
         </model-viewer>
         
     </body>
